# pybind

./: BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  benchmark.py  main.py  mumpy.cc
cuda/: BUILD  kernel.cu  kernel.h  main.cpp
linalg/: BUILD  matmul.cc  matmul.h
